@@ -1,28 +1,36 @@
-import java.io.BufferedReader;
-import java.io.FileReader;
+import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.math.BigDecimal;
 import java.math.RoundingMode;
-import java.net.URL;
+import java.net.URI;
+import java.nio.file.Path;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 
 import com.opencsv.CSVReader;
 
-public class SPYBacktest {
+public final class SPYBacktest {
+
+    private static final Logger LOGGER = Logger.getLogger(SPYBacktest.class.getName());
 
     private static final BigDecimal INITIAL_CAPITAL = new BigDecimal("100000.00");
-    private static final BigDecimal COMMISSION = new BigDecimal("0.00"); // Most brokers are commission-free now
+    private static final BigDecimal COMMISSION = BigDecimal.ZERO; // Most brokers are commission-free now
+    private static final int TRADING_DAYS_PER_YEAR = 252;
+    private static final long FIVE_YEARS_IN_SECONDS = 5L * 365 * 24 * 60 * 60;
 
-    public static void main(String[] args) throws Exception {
+    private SPYBacktest() {
+        // Utility class - prevent instantiation
+    }
+
+    public static void main(String[] args) {
         System.out.println("========================================");
         System.out.println("  SPY Trading Strategy Backtester");
         System.out.println("========================================");
         System.out.println();
 
-        // Load SPY historical data
         List<PriceData> data;
         if (args.length > 0) {
             System.out.println("Loading SPY data from file: " + args[0]);
@@ -42,21 +50,22 @@ public class SPYBacktest {
         }
 
         System.out.println("Loaded " + data.size() + " trading days");
-        System.out.println("Date range: " + data.get(0).getDate() + " to " + data.get(data.size() - 1).getDate());
+        System.out.println("Date range: " + data.getFirst().getDate() + " to " + data.getLast().getDate());
         System.out.println("Starting capital: $" + INITIAL_CAPITAL.setScale(2, RoundingMode.HALF_UP));
         System.out.println();
 
         // Define strategies
-        List<TradingStrategy> strategies = new ArrayList<>();
-        strategies.add(new SMACrossoverStrategy(50, 200));
-        strategies.add(new SMACrossoverStrategy(20, 50));
-        strategies.add(new RSIStrategy(14, 30, 70));
-        strategies.add(new RSIStrategy(14, 25, 75));
-        strategies.add(new MACDStrategy(12, 26, 9));
+        List<TradingStrategy> strategies = List.of(
+                new SMACrossoverStrategy(50, 200),
+                new SMACrossoverStrategy(20, 50),
+                new RSIStrategy(14, 30, 70),
+                new RSIStrategy(14, 25, 75),
+                new MACDStrategy(12, 26, 9)
+        );
 
         // Run backtests
-        BacktestEngine engine = new BacktestEngine(INITIAL_CAPITAL, COMMISSION);
-        List<BacktestResult> results = new ArrayList<>();
+        var engine = new BacktestEngine(INITIAL_CAPITAL, COMMISSION);
+        List<BacktestResult> results = new ArrayList<>(strategies.size());
 
         for (TradingStrategy strategy : strategies) {
             System.out.println("Running backtest: " + strategy.getName() + "...");
@@ -65,40 +74,33 @@ public class SPYBacktest {
             result.printReport(data);
         }
 
-        // Print comparison summary
         printComparison(results, data);
     }
 
     private static List<PriceData> loadFromCSV(String filename) {
         List<PriceData> data = new ArrayList<>();
 
-        try {
-            CSVReader reader = new CSVReader(new FileReader(filename));
-
-            // Skip header
-            String[] header = reader.readNext();
+        try (var reader = new CSVReader(new java.io.FileReader(filename))) {
+            reader.readNext(); // Skip header
 
             String[] line;
             while ((line = reader.readNext()) != null) {
                 try {
                     String date = line[0];
-                    BigDecimal open = new BigDecimal(line[1]);
-                    BigDecimal high = new BigDecimal(line[2]);
-                    BigDecimal low = new BigDecimal(line[3]);
-                    BigDecimal close = new BigDecimal(line[4]);
-                    BigDecimal adjClose = line.length > 5 ? new BigDecimal(line[5]) : close;
+                    var open = new BigDecimal(line[1]);
+                    var high = new BigDecimal(line[2]);
+                    var low = new BigDecimal(line[3]);
+                    var close = new BigDecimal(line[4]);
+                    var adjClose = line.length > 5 ? new BigDecimal(line[5]) : close;
                     long volume = line.length > 6 ? Long.parseLong(line[6]) : 0;
 
                     data.add(new PriceData(date, open, high, low, close, adjClose, volume));
                 } catch (NumberFormatException e) {
                     // Skip lines with invalid data (e.g., "null" values)
-                    continue;
                 }
             }
-
-            reader.close();
         } catch (Exception e) {
-            System.out.println("Error loading CSV: " + e.getMessage());
+            LOGGER.log(Level.WARNING, "Error loading CSV: {0}", e.getMessage());
         }
 
         return data;
@@ -108,50 +110,44 @@ public class SPYBacktest {
         List<PriceData> data = new ArrayList<>();
 
         try {
-            // Attempt to download from Yahoo Finance via the existing GetYahooQuotes mechanism
-            GetYahooQuotes quotes = new GetYahooQuotes();
+            var quotes = new GetYahooQuotes();
             String crumb = quotes.getCrumb("SPY");
 
             if (crumb != null && !crumb.isEmpty()) {
-                // Download 5 years of data
                 long endDate = System.currentTimeMillis() / 1000;
-                long startDate = endDate - (5L * 365 * 24 * 60 * 60); // ~5 years back
+                long startDate = endDate - FIVE_YEARS_IN_SECONDS;
 
-                String url = String.format(
-                        "https://query1.finance.yahoo.com/v7/finance/download/SPY?period1=%d&period2=%d&interval=1d&events=history&crumb=%s",
-                        startDate, endDate, crumb);
+                String url = "https://query1.finance.yahoo.com/v7/finance/download/SPY?period1=%d&period2=%d&interval=1d&events=history&crumb=%s"
+                        .formatted(startDate, endDate, crumb);
 
-                InputStream input = new URL(url).openStream();
-                CSVReader reader = new CSVReader(new InputStreamReader(input));
+                try (InputStream input = URI.create(url).toURL().openStream();
+                     var reader = new CSVReader(new InputStreamReader(input))) {
 
-                // Skip header
-                reader.readNext();
+                    reader.readNext(); // Skip header
 
-                String[] line;
-                while ((line = reader.readNext()) != null) {
-                    try {
-                        String date = line[0];
-                        BigDecimal open = new BigDecimal(line[1]);
-                        BigDecimal high = new BigDecimal(line[2]);
-                        BigDecimal low = new BigDecimal(line[3]);
-                        BigDecimal close = new BigDecimal(line[4]);
-                        BigDecimal adjClose = new BigDecimal(line[5]);
-                        long volume = Long.parseLong(line[6]);
-
-                        data.add(new PriceData(date, open, high, low, close, adjClose, volume));
-                    } catch (NumberFormatException e) {
-                        continue;
+                    String[] line;
+                    while ((line = reader.readNext()) != null) {
+                        try {
+                            data.add(new PriceData(
+                                    line[0],
+                                    new BigDecimal(line[1]),
+                                    new BigDecimal(line[2]),
+                                    new BigDecimal(line[3]),
+                                    new BigDecimal(line[4]),
+                                    new BigDecimal(line[5]),
+                                    Long.parseLong(line[6])));
+                        } catch (NumberFormatException e) {
+                            // Skip lines with invalid data
+                        }
                     }
                 }
-
-                reader.close();
                 System.out.println("Downloaded " + data.size() + " days of SPY data from Yahoo Finance");
             } else {
                 System.out.println("Could not obtain Yahoo Finance authentication crumb.");
                 System.out.println("Please provide a CSV file instead.");
             }
-        } catch (Exception e) {
-            System.out.println("Could not download SPY data: " + e.getMessage());
+        } catch (IOException e) {
+            LOGGER.log(Level.WARNING, "Could not download SPY data: {0}", e.getMessage());
             System.out.println("Please provide a CSV file as argument: java SPYBacktest spy_data.csv");
         }
 
@@ -171,10 +167,13 @@ public class SPYBacktest {
         // Buy and hold benchmark
         BigDecimal buyAndHold = BigDecimal.ZERO;
         if (!data.isEmpty()) {
-            BigDecimal first = data.get(0).getClose();
-            BigDecimal last = data.get(data.size() - 1).getClose();
-            buyAndHold = last.subtract(first).divide(first, 6, RoundingMode.HALF_UP).multiply(BigDecimal.valueOf(100));
+            BigDecimal first = data.getFirst().getClose();
+            BigDecimal last = data.getLast().getClose();
+            buyAndHold = last.subtract(first)
+                    .divide(first, 6, RoundingMode.HALF_UP)
+                    .multiply(BigDecimal.valueOf(100));
         }
+
         System.out.printf("  %-35s %10s %10s %10s %10s %10s%n",
                 "Strategy", "Return", "Sharpe", "MaxDD", "Trades", "Win Rate");
         System.out.println(thinSep);
@@ -187,7 +186,7 @@ public class SPYBacktest {
             System.out.printf("  %-35s %9s%% %10s %9s%% %10d %9s%%%n",
                     r.getStrategyName(),
                     r.getTotalReturn().setScale(2, RoundingMode.HALF_UP),
-                    r.getSharpeRatio(252),
+                    r.getSharpeRatio(TRADING_DAYS_PER_YEAR),
                     r.getMaxDrawdown().setScale(2, RoundingMode.HALF_UP),
                     r.getTotalTrades(),
                     r.getWinRate().setScale(2, RoundingMode.HALF_UP));
@@ -208,7 +207,7 @@ public class SPYBacktest {
             System.out.println("  Best performing strategy: " + best.getStrategyName());
             System.out.printf("  Return: %s%% | Sharpe: %s | Max Drawdown: %s%%%n",
                     best.getTotalReturn().setScale(2, RoundingMode.HALF_UP),
-                    best.getSharpeRatio(252),
+                    best.getSharpeRatio(TRADING_DAYS_PER_YEAR),
                     best.getMaxDrawdown().setScale(2, RoundingMode.HALF_UP));
 
             if (best.getTotalReturn().compareTo(buyAndHold) > 0) {
