@@ -1,32 +1,27 @@
-// Java
 import java.io.BufferedReader;
-import java.io.BufferedWriter;
-import java.io.File;
-import java.io.FileNotFoundException;
 import java.io.FileReader;
-import java.io.FileWriter;
 import java.io.IOException;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.StandardOpenOption;
 import java.text.DateFormat;
 import java.text.SimpleDateFormat;
 import java.util.Calendar;
 import java.util.List;
+import java.util.Set;
 import java.util.TreeSet;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 
-// Apache
 import org.apache.commons.io.FileUtils;
-
-// Jsoup
 import org.jsoup.Jsoup;
 import org.jsoup.nodes.Document;
 import org.jsoup.nodes.Element;
 
-// Google
 import com.google.common.collect.ArrayListMultimap;
 import com.google.common.collect.ListMultimap;
-
-// opencsv
 import com.opencsv.CSVParser;
 import com.opencsv.CSVParserBuilder;
 import com.opencsv.CSVReader;
@@ -34,28 +29,20 @@ import com.opencsv.CSVReaderBuilder;
 
 public class StockDownloader {
 
-    private TreeSet<String> nasdaqList;
-    private TreeSet<String> othersList;
-    private TreeSet<String> mfundsList;
-    private TreeSet<String> zacksList;
-    private TreeSet<String> earningsList;
-    private TreeSet<String> incompleteList;
+    private static final Logger LOGGER = Logger.getLogger(StockDownloader.class.getName());
+    private static final int MAX_RETRIES = 3;
 
-    public StockDownloader() {
-        nasdaqList = new TreeSet<String>();
-        othersList = new TreeSet<String>();
-        mfundsList = new TreeSet<String>();
-        zacksList = new TreeSet<String>();
-        earningsList = new TreeSet<String>();
-        incompleteList = new TreeSet<String>();
-    }
+    private TreeSet<String> nasdaqList = new TreeSet<>();
+    private TreeSet<String> othersList = new TreeSet<>();
+    private TreeSet<String> mfundsList = new TreeSet<>();
+    private TreeSet<String> zacksList = new TreeSet<>();
+    private TreeSet<String> earningsList = new TreeSet<>();
+    private TreeSet<String> incompleteList = new TreeSet<>();
 
     private static TreeSet<String> readDownloadedFile(String filename) {
-        TreeSet<String> list = new TreeSet<String>();
+        var list = new TreeSet<String>();
 
-        try {
-            BufferedReader reader = new BufferedReader(new FileReader(filename));
-
+        try (var reader = new BufferedReader(new FileReader(filename))) {
             // Skip first line
             reader.readLine();
 
@@ -63,20 +50,16 @@ public class StockDownloader {
             String next = reader.readLine();
 
             while (current != null) {
-
-                // Skip last line
-                if (next == null)
-                    break;
+                if (next == null) break; // Skip last line
 
                 String ticker = current.substring(0, current.indexOf('|'));
                 list.add(ticker);
                 current = next;
                 next = reader.readLine();
             }
-
-            reader.close();
         } catch (IOException e) {
-            e.printStackTrace();
+            LOGGER.log(Level.WARNING, "Error reading downloaded file {0}: {1}",
+                    new Object[]{filename, e.getMessage()});
         }
 
         return list;
@@ -108,17 +91,14 @@ public class StockDownloader {
         String file = "rank_1.txt";
         downloadFile(url, file);
 
-        try {
-            CSVParser parser = new CSVParserBuilder().withSeparator('\t').build();
-            CSVReader reader = new CSVReaderBuilder(new FileReader(file)).withSkipLines(2).withCSVParser(parser).build();
-
+        CSVParser parser = new CSVParserBuilder().withSeparator('\t').build();
+        try (var reader = new CSVReaderBuilder(new FileReader(file)).withSkipLines(2).withCSVParser(parser).build()) {
             String[] nextLine;
-            while ((nextLine = reader.readNext()) != null)
+            while ((nextLine = reader.readNext()) != null) {
                 zacksList.add(nextLine[0]);
-
-            reader.close();
+            }
         } catch (IOException e) {
-            e.printStackTrace();
+            LOGGER.log(Level.WARNING, "Error reading Zacks file: {0}", e.getMessage());
         }
     }
 
@@ -126,34 +106,32 @@ public class StockDownloader {
         DateFormat dateFormat = new SimpleDateFormat("yyyy-MM-dd");
         String date = dateFormat.format(calendar.getTime());
         String url = "https://finance.yahoo.com/calendar/earnings?day=" + date;
-        ListMultimap<String, String> YahooEarnings = ArrayListMultimap.create();
+        ListMultimap<String, String> yahooEarnings = ArrayListMultimap.create();
 
         try {
             Document doc = Jsoup.connect(url).get();
             Element table = doc.select("#fin-cal-table > div:eq(2) > table > tbody").first();
 
-            for (Element tr : table.children()) {
-                String ticker = tr.child(1).text();
-                String time = tr.child(3).text();
-                YahooEarnings.put(time, ticker);
+            if (table != null) {
+                for (Element tr : table.children()) {
+                    String ticker = tr.child(1).text();
+                    String time = tr.child(3).text();
+                    yahooEarnings.put(time, ticker);
+                }
             }
 
-            // Create separate list
-            for (String time : YahooEarnings.keySet()) {
-                List<String> list = YahooEarnings.get(time);
-                for (String ticker : list)
-                    earningsList.add(ticker);
+            for (String time : yahooEarnings.keySet()) {
+                List<String> list = yahooEarnings.get(time);
+                earningsList.addAll(list);
             }
         } catch (IOException e) {
-            e.printStackTrace();
-            downloadYahooEarnings(calendar);
+            LOGGER.log(Level.WARNING, "Error downloading Yahoo earnings for {0}: {1}",
+                    new Object[]{date, e.getMessage()});
         }
 
-        for (String time : YahooEarnings.keySet()) {
-            System.out.println(date + "\t" + time + ":\t" + YahooEarnings.get(time));
+        for (String time : yahooEarnings.keySet()) {
+            System.out.println(date + "\t" + time + ":\t" + yahooEarnings.get(time));
         }
-
-        return;
     }
 
     public void readIncomplete() {
@@ -173,117 +151,86 @@ public class StockDownloader {
     }
 
     private void downloadFile(String url, String filename) {
+        downloadFile(url, filename, 0);
+    }
+
+    private void downloadFile(String url, String filename, int retryCount) {
         try {
-            URL file_url = new URL(url);
-            File file = new File(filename);
-            FileUtils.copyURLToFile(file_url, file);
-        } catch (MalformedURLException e) {
-            e.printStackTrace();
-            downloadFile(url, filename);
-        } catch (IOException e) {
-            e.printStackTrace();
-            downloadFile(url, filename);
+            var fileUrl = URI.create(url).toURL();
+            var file = Path.of(filename).toFile();
+            FileUtils.copyURLToFile(fileUrl, file);
+        } catch (Exception e) {
+            if (retryCount < MAX_RETRIES) {
+                LOGGER.log(Level.FINE, "Retrying download for {0}, attempt {1}",
+                        new Object[]{filename, retryCount + 1});
+                downloadFile(url, filename, retryCount + 1);
+            } else {
+                LOGGER.log(Level.WARNING, "Failed to download {0} after {1} retries: {2}",
+                        new Object[]{filename, MAX_RETRIES, e.getMessage()});
+            }
         }
     }
 
-    private void writeFile(TreeSet<String> list, String filename) {
+    private void writeFile(Set<String> list, String filename) {
         try {
-            BufferedWriter bw = new BufferedWriter(new FileWriter(filename));
-
-            for (String ticker : list)
-                bw.write(ticker);
-
-            bw.close();
+            Files.writeString(Path.of(filename), String.join(System.lineSeparator(), list),
+                    StandardCharsets.UTF_8,
+                    StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
         } catch (IOException e) {
-            e.printStackTrace();
-            writeFile(list, filename);
+            LOGGER.log(Level.WARNING, "Error writing file {0}: {1}",
+                    new Object[]{filename, e.getMessage()});
         }
     }
 
     private TreeSet<String> readFile(String filename) {
-        TreeSet<String> list = new TreeSet<String>();
+        var list = new TreeSet<String>();
 
         try {
-            BufferedReader br = new BufferedReader(new FileReader(filename));
-
-            for (String line = br.readLine(); line != null; line = br.readLine())
-                list.add(line);
-
-            br.close();
-        } catch (FileNotFoundException e) {
-            e.printStackTrace();
+            Path path = Path.of(filename);
+            if (Files.exists(path)) {
+                for (String line : Files.readAllLines(path, StandardCharsets.UTF_8)) {
+                    if (!line.isBlank()) {
+                        list.add(line.trim());
+                    }
+                }
+            }
         } catch (IOException e) {
-            e.printStackTrace();
-            readFile(filename);
+            LOGGER.log(Level.WARNING, "Error reading file {0}: {1}",
+                    new Object[]{filename, e.getMessage()});
         }
 
         return list;
     }
 
     public void deleteFile(String filename) {
-        File file = new File(filename);
-        if (file.delete())
-            System.out.println(file.getName() + " deleted.");
-        else
-            System.out.println("Delete operation failed.");
+        try {
+            if (Files.deleteIfExists(Path.of(filename))) {
+                LOGGER.log(Level.INFO, "{0} deleted.", filename);
+            } else {
+                LOGGER.log(Level.WARNING, "File {0} does not exist.", filename);
+            }
+        } catch (IOException e) {
+            LOGGER.log(Level.WARNING, "Error deleting {0}: {1}",
+                    new Object[]{filename, e.getMessage()});
+        }
     }
 
     private void appendToFile(String str, String filename) {
         try {
-            BufferedWriter bw = new BufferedWriter(new FileWriter(filename, true));
-            bw.write(str);
-            bw.newLine();
-            bw.close();
+            Files.writeString(Path.of(filename), str + System.lineSeparator(),
+                    StandardCharsets.UTF_8,
+                    StandardOpenOption.CREATE, StandardOpenOption.APPEND);
         } catch (IOException e) {
-            e.printStackTrace();
+            LOGGER.log(Level.WARNING, "Error appending to {0}: {1}",
+                    new Object[]{filename, e.getMessage()});
         }
     }
 
-    public TreeSet<String> getNasdaqList() {
-        return nasdaqList;
-    }
-
-    public void setNasdaqList(TreeSet<String> nasdaqList) {
-        this.nasdaqList = nasdaqList;
-    }
-
-    public TreeSet<String> getOthersList() {
-        return othersList;
-    }
-
-    public void setOthersList(TreeSet<String> othersList) {
-        this.othersList = othersList;
-    }
-
-    public TreeSet<String> getMfundsList() {
-        return mfundsList;
-    }
-
-    public void setMfundsList(TreeSet<String> mfundsList) {
-        this.mfundsList = mfundsList;
-    }
-
-    public TreeSet<String> getZacksList() {
-        return zacksList;
-    }
-
-    public void setZacksList(TreeSet<String> zacksList) {
-        this.zacksList = zacksList;
-    }
-
-    public TreeSet<String> getEarningsList() {
-        return earningsList;
-    }
-
-    public void setEarningsList(TreeSet<String> earningsList) {
-        this.earningsList = earningsList;
-    }
-
-    public TreeSet<String> getIncompleteList() {
-        return incompleteList;
-    }
-
-    public void setIncompleteList(TreeSet<String> incompleteList) {
-        this.incompleteList = incompleteList;
-    }
+    // Getters - return unmodifiable views
+    public Set<String> getNasdaqList() { return Set.copyOf(nasdaqList); }
+    public Set<String> getOthersList() { return Set.copyOf(othersList); }
+    public Set<String> getMfundsList() { return Set.copyOf(mfundsList); }
+    public Set<String> getZacksList() { return Set.copyOf(zacksList); }
+    public Set<String> getEarningsList() { return Set.copyOf(earningsList); }
+    public Set<String> getIncompleteList() { return Set.copyOf(incompleteList); }
 }
