@@ -1,24 +1,30 @@
 import java.math.BigDecimal;
 import java.math.RoundingMode;
+import java.util.Objects;
 
-public class Trade {
+public final class Trade {
+
     public enum Direction { LONG, SHORT }
     public enum Status { OPEN, CLOSED }
 
-    private Direction direction;
+    private final Direction direction;
+    private final String entryDate;
+    private final BigDecimal entryPrice;
+    private final int shares;
+
     private Status status;
-    private String entryDate;
     private String exitDate;
-    private BigDecimal entryPrice;
     private BigDecimal exitPrice;
-    private int shares;
     private BigDecimal profitLoss;
     private BigDecimal returnPct;
 
     public Trade(Direction direction, String entryDate, BigDecimal entryPrice, int shares) {
-        this.direction = direction;
-        this.entryDate = entryDate;
-        this.entryPrice = entryPrice;
+        this.direction = Objects.requireNonNull(direction, "direction must not be null");
+        this.entryDate = Objects.requireNonNull(entryDate, "entryDate must not be null");
+        this.entryPrice = Objects.requireNonNull(entryPrice, "entryPrice must not be null");
+        if (shares <= 0) {
+            throw new IllegalArgumentException("shares must be positive");
+        }
         this.shares = shares;
         this.status = Status.OPEN;
         this.profitLoss = BigDecimal.ZERO;
@@ -26,21 +32,25 @@ public class Trade {
     }
 
     public void close(String exitDate, BigDecimal exitPrice) {
+        Objects.requireNonNull(exitDate, "exitDate must not be null");
+        Objects.requireNonNull(exitPrice, "exitPrice must not be null");
+        if (this.status == Status.CLOSED) {
+            throw new IllegalStateException("Trade is already closed");
+        }
+
         this.exitDate = exitDate;
         this.exitPrice = exitPrice;
         this.status = Status.CLOSED;
 
-        if (direction == Direction.LONG) {
-            this.profitLoss = exitPrice.subtract(entryPrice).multiply(BigDecimal.valueOf(shares));
-            this.returnPct = exitPrice.subtract(entryPrice)
-                    .divide(entryPrice, 6, RoundingMode.HALF_UP)
-                    .multiply(BigDecimal.valueOf(100));
-        } else {
-            this.profitLoss = entryPrice.subtract(exitPrice).multiply(BigDecimal.valueOf(shares));
-            this.returnPct = entryPrice.subtract(exitPrice)
-                    .divide(entryPrice, 6, RoundingMode.HALF_UP)
-                    .multiply(BigDecimal.valueOf(100));
-        }
+        BigDecimal priceDiff = switch (direction) {
+            case LONG -> exitPrice.subtract(entryPrice);
+            case SHORT -> entryPrice.subtract(exitPrice);
+        };
+
+        this.profitLoss = priceDiff.multiply(BigDecimal.valueOf(shares));
+        this.returnPct = priceDiff
+                .divide(entryPrice, 6, RoundingMode.HALF_UP)
+                .multiply(BigDecimal.valueOf(100));
     }
 
     public boolean isWin() {
@@ -59,8 +69,9 @@ public class Trade {
 
     @Override
     public String toString() {
-        return String.format("%s %s: Entry %s @ $%s -> Exit %s @ $%s | P/L: $%s (%.2f%%)",
-                direction, status, entryDate, entryPrice.setScale(2, RoundingMode.HALF_UP),
+        return "%s %s: Entry %s @ $%s -> Exit %s @ $%s | P/L: $%s (%.2f%%)".formatted(
+                direction, status,
+                entryDate, entryPrice.setScale(2, RoundingMode.HALF_UP),
                 exitDate != null ? exitDate : "N/A",
                 exitPrice != null ? exitPrice.setScale(2, RoundingMode.HALF_UP) : "N/A",
                 profitLoss.setScale(2, RoundingMode.HALF_UP),
